<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_item"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/me_string"
        android:checked="false" />

    <item
        android:id="@+id/offline_item"
        android:icon="@drawable/ic_file_download_black_24dp"
        android:title="@string/offline_string"
        android:checked="false" />

    <item
        android:id="@+id/scanner_item"
        android:icon="@drawable/ic_center_focus_scan_24dp"
        android:title="@string/scanner_string"
        android:checked="true"/>

    <item
        android:id="@+id/recent_item"
        android:icon="@drawable/ic_recent_files_24dp"
        android:title="@string/recent_string"
        android:checked="false" />

    <item
        android:id="@+id/files_item"
        android:icon="@drawable/ic_tmp_pdf_24dp"
        android:title="@string/files_string"
        android:checked="false"/>
</menu>