<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="30dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:layout_centerHorizontal="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_string"
        android:textSize="@dimen/big_text_size"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/delete_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_delete_24dp"
        android:drawablePadding="40dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textSize="@dimen/normal_text_size"
        android:text="@string/delete_file_string"/>

    <TextView
        android:id="@+id/info_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_info_black_24dp"
        android:drawablePadding="40dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textSize="@dimen/normal_text_size"
        android:text="@string/info_string"/>

</LinearLayout>