<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment"
    android:layout_marginBottom="@dimen/bottom_navigation_view_dim"
    android:id="@+id/main_layout">

    <include layout="@layout/titlebar" android:id="@id/titlebar"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/profile_image"
        android:layout_below="@id/titlebar"
        android:backgroundTint="@color/transparent_white"
        android:layout_marginTop="@dimen/personal_page_dim"
        android:layout_marginBottom="@dimen/personal_page_dim"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/display_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="@dimen/home_info_height"
        android:textColor="@color/colorOnBackground"
        android:text="@string/display_name_string"/>

    <TextView
        android:id="@+id/display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/display_name_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:textSize="@dimen/home_info_height"
        android:textColor="@color/colorOnBackground"
        android:text="---------"/>

    <TextView
        android:id="@+id/personal_email_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/display_name"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="@dimen/home_info_height"
        android:textColor="@color/colorOnBackground"
        android:text="@string/email_used_string"/>

    <TextView
        android:id="@+id/personal_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/personal_email_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:textSize="@dimen/home_info_height"
        android:textColor="@color/colorOnBackground"
        android:text="--------"/>

    <TextView
        android:id="@+id/space_used_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/personal_email"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/home_info_height"
        android:textColor="@color/colorOnBackground"
        android:text="@string/total_space_used"/>

    <TextView
        android:id="@+id/stored_files_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/space_used_text_view"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/home_info_height"
        android:textColor="@color/colorOnBackground"
        android:text="@string/file_number_stored"/>

    <LinearLayout
        android:id="@+id/options_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/stored_files_text_view"
        android:gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:paddingBottom="10dp">



        <include layout="@layout/divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textSize="@dimen/home_option_height"
            android:textStyle="bold"
            android:textColor="@color/colorOnBackground"
            android:text="@string/language"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <RadioButton
                android:id="@+id/english_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/colorOnBackground"
                android:buttonTint="@color/colorOnBackground"
                android:text="@string/english"/>

            <RadioButton
                android:id="@+id/italian_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/colorOnBackground"
                android:buttonTint="@color/colorOnBackground"
                android:text="@string/italian"/>
        </RadioGroup>

        <include layout="@layout/divider" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <include
            android:id="@+id/about"
            layout="@layout/home_option_item" />

        <include
            android:id="@+id/logout"
            layout="@layout/home_option_item" />

        <TextView
            android:id="@+id/version_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="15sp"
            android:textColor="@color/colorOnBackground"
            android:text="@string/version"/>

    </LinearLayout>

</RelativeLayout>