<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="10dp"
    android:background="@drawable/dialog_shape">

    <EditText
        android:id="@+id/name_text"
        android:background="@drawable/edit_text_shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:hint="@string/default_folder_string"
        android:padding="10dp"
        android:textColorHint="@color/colorPrimary"
        android:autofillHints="@string/default_folder_string"
        android:inputType="text"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        tools:targetApi="o" />

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle"
        android:padding="4dp">

        <Button
            android:text="@string/cancel_upper_string"
            android:id="@+id/cancel_button"
            android:background="@color/zxing_transparent"
            android:layout_marginEnd="10dp"
            android:textColor="#FF0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/confirm_button"
            android:text="@string/confirm_upper_string"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/zxing_transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>