<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:alpha="0.9"
    android:backgroundTint="@color/colorAccent">


    <EditText
        android:id="@+id/email_text"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:ems="10"
        android:cursorVisible="true"
        android:textCursorDrawable="@null"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:textColor="#333333"
        android:drawablePadding="25dp"
        android:hint="@string/prompt_email"
        android:textColorHint="#d8d8d8"
        android:paddingTop="5dp"
        android:layout_marginTop="31dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingStart="10dp"
        android:fontFamily="sans-serif"
        android:paddingLeft="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/password_text"
        android:inputType="textPassword"
        android:ems="10"
        android:textSize="20sp"
        android:textColor="#333333"
        android:hint= "@string/prompt_password"
        android:textColorHint="#d8d8d8"
        android:cursorVisible="true"
        android:drawablePadding="25dp"
        android:paddingTop="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="20dp"
        android:layout_below="@+id/email_text"
        android:paddingStart="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit_button"
        android:layout_below="@+id/password_text"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:text="@string/sign_in"
        android:textColor="#111111"
        android:fontFamily="sans-serif"
        android:textStyle="normal|bold"
        android:backgroundTint="@color/colorPrimary"/>
    <Button
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submit_button"
        android:textAlignment="center"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:backgroundTint="@color/colorPrimary"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/sign_up"
        android:layout_marginRight="22dp"
        android:layout_marginLeft="22dp"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/facebook_button"
        android:textSize="20sp"
        android:fontFamily="sans-serif"/>

</RelativeLayout>